--- a/project/CURK/ontology/pdf-navigator.html
+++ b/project/CURK/ontology/pdf-navigator.html
@@ -36,6 +36,7 @@
             grid-template-columns: 400px 1fr;
             gap: 0;
             height: calc(100vh - 80px);
+            position: relative;
         }
 
         @media (max-width: 1024px) {
@@ -50,13 +51,37 @@
             overflow-y: auto;
             display: flex;
             flex-direction: column;
+            transition: transform 0.3s ease;
         }
 
-        .ontology-panel.collapsed {
-            width: 0;
-            min-width: 0;
-            border: none;
-            overflow: hidden;
+        /* Mobile: Fixed overlay panel */
+        @media (max-width: 1024px) {
+            .ontology-panel {
+                position: fixed;
+                left: 0;
+                top: 80px;
+                width: 90%;
+                max-width: 400px;
+                height: calc(100vh - 80px);
+                background: #0f172a;
+                z-index: 100;
+                box-shadow: 2px 0 10px rgba(0, 0, 0, 0.3);
+            }
+
+            .ontology-panel.collapsed {
+                transform: translateX(-100%);
+            }
+
+            .ontology-panel:not(.collapsed) {
+                transform: translateX(0);
+            }
+        }
+
+        /* Desktop: Always visible */
+        @media (min-width: 1025px) {
+            .ontology-panel.collapsed {
+                transform: none;
+            }
         }
 
         /* PDF Panel */
@@ -83,29 +108,58 @@
 
         /* Toggle Button */
         .panel-toggle {
-            position: absolute;
+            position: fixed;
             top: 50%;
             transform: translateY(-50%);
-            z-index: 10;
-            width: 32px;
-            height: 64px;
+            z-index: 101;
+            width: 48px;
+            height: 48px;
             background: #F86825;
             border: none;
-            border-radius: 0 0.5rem 0.5rem 0;
+            border-radius: 0 0.75rem 0.75rem 0;
             cursor: pointer;
             display: flex;
             align-items: center;
             justify-content: center;
             transition: all 0.3s;
+            box-shadow: 2px 0 8px rgba(0, 0, 0, 0.3);
         }
 
         .panel-toggle:hover {
             background: #e05a1a;
-            width: 36px;
+            width: 52px;
         }
 
         .panel-toggle.left {
             left: 0;
+        }
+
+        /* Mobile overlay */
+        .panel-overlay {
+            display: none;
+            position: fixed;
+            top: 80px;
+            left: 0;
+            width: 100vw;
+            height: calc(100vh - 80px);
+            background: rgba(0, 0, 0, 0.5);
+            z-index: 99;
+            opacity: 0;
+            transition: opacity 0.3s;
+        }
+
+        .panel-overlay.active {
+            display: block;
+            opacity: 1;
+        }
+
+        @media (min-width: 1025px) {
+            .panel-toggle {
+                display: none;
+            }
+            .panel-overlay {
+                display: none !important;
+            }
         }
 
         /* Mention Badge */
@@ -236,6 +290,29 @@
             margin-left: auto;
         }
 
+        /* Tree Control Buttons */
+        .tree-control-buttons {
+            display: flex;
+            gap: 0.5rem;
+            margin-bottom: 0.75rem;
+        }
+
+        .tree-control-btn {
+            padding: 0.375rem 0.75rem;
+            background: #334155;
+            color: #94a3b8;
+            border: none;
+            border-radius: 0.375rem;
+            font-size: 0.75rem;
+            cursor: pointer;
+            transition: all 0.2s;
+        }
+
+        .tree-control-btn:hover {
+            background: #475569;
+            color: #14b8a6;
+        }
+
         /* PDF Text Layer */
         #pdf-page-wrapper {
             position: relative;
@@ -262,8 +339,10 @@
         }
 
         .textLayer span.highlight {
-            background-color: rgba(248, 104, 37, 0.8);
+            background-color: #F86825;
             color: transparent !important;
+            border-bottom: 3px solid #e05a1a;
+            box-shadow: 0 0 8px rgba(248, 104, 37, 0.6);
         }
 
         .textLayer span.highlight-context {
@@ -308,10 +387,20 @@
             </p>
         </div>
 
+        <!-- Panel Overlay (Mobile) -->
+        <div id="panel-overlay" class="panel-overlay"></div>
+
+        <!-- Toggle Button (Mobile) -->
+        <button id="toggle-ontology" class="panel-toggle left" aria-label="Toggle Ontology Panel">
+            <svg class="w-5 h-5 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+            </svg>
+        </button>
+
         <!-- Main Layout -->
         <div class="main-layout">
             <!-- Left Panel: Ontology -->
-            <div id="ontology-panel" class="ontology-panel bg-slate-900/50">
+            <div id="ontology-panel" class="ontology-panel collapsed bg-slate-900/50">
                 <!-- Panel Header -->
                 <div class="p-4 border-b border-slate-700">
                     <h2 class="text-xl font-bold text-white mb-2">온톨로지 탐색</h2>
@@ -349,6 +438,12 @@
 
                         <!-- Tree View Tab -->
                         <div id="tab-tree" class="tab-content-top h-full overflow-y-auto p-4">
+                            <!-- Tree Control Buttons -->
+                            <div class="tree-control-buttons">
+                                <button id="tree-expand-all" class="tree-control-btn">모두 열기</button>
+                                <button id="tree-collapse-all" class="tree-control-btn">모두 닫기</button>
+                            </div>
+
                             <div id="tree-container" class="space-y-1">
                                 <p class="text-sm text-slate-400">트리 뷰 준비 중...</p>
                             </div>
@@ -371,13 +466,6 @@
 
             <!-- Right Panel: PDF Viewer -->
             <div class="pdf-panel relative">
-                <!-- Toggle Button -->
-                <button id="toggle-ontology" class="panel-toggle left">
-                    <svg class="w-4 h-4 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
-                    </svg>
-                </button>
-
                 <!-- PDF Controls -->
                 <div class="p-4 border-b border-slate-800 bg-slate-900/50">
                     <div class="flex items-center justify-between">
@@ -415,6 +503,181 @@
                         <div id="text-layer" class="textLayer"></div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Usage Guide Section -->
+    <div class="container mx-auto px-4 py-16 max-w-6xl">
+        <div class="bg-slate-900/50 rounded-lg p-8 border border-slate-700">
+            <h2 class="text-3xl font-bold text-white mb-4">📚 활용 가이드</h2>
+            <p class="text-slate-400 mb-8">
+                온톨로지 기반 PDF 탐색기를 다양한 시나리오에서 활용하는 방법을 소개합니다.
+            </p>
+
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                <!-- Scenario 1 -->
+                <div class="bg-slate-800/50 rounded-lg p-6 border border-slate-700 hover:border-teal-500/40 transition-colors">
+                    <div class="flex items-start gap-3">
+                        <span class="text-2xl">🎯</span>
+                        <div>
+                            <h3 class="text-lg font-semibold text-white mb-2">1. 표준 문서 학습</h3>
+                            <p class="text-sm text-slate-400">ISO/IEC 5259-2 데이터 품질 표준을 체계적으로 학습할 때, 온톨로지 그래프로 전체 구조를 파악하고 각 개념이 문서 어디에 정의되어 있는지 빠르게 찾을 수 있습니다.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Scenario 2 -->
+                <div class="bg-slate-800/50 rounded-lg p-6 border border-slate-700 hover:border-teal-500/40 transition-colors">
+                    <div class="flex items-start gap-3">
+                        <span class="text-2xl">🔍</span>
+                        <div>
+                            <h3 class="text-lg font-semibold text-white mb-2">2. 개념 간 관계 탐색</h3>
+                            <p class="text-sm text-slate-400">데이터 품질 특성(Accuracy, Completeness 등)이 서로 어떻게 연결되어 있는지 그래프 뷰에서 시각적으로 확인하고, 관련 정의를 PDF에서 즉시 참조할 수 있습니다.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Scenario 3 -->
+                <div class="bg-slate-800/50 rounded-lg p-6 border border-slate-700 hover:border-teal-500/40 transition-colors">
+                    <div class="flex items-start gap-3">
+                        <span class="text-2xl">📝</span>
+                        <div>
+                            <h3 class="text-lg font-semibold text-white mb-2">3. 기술 문서 작성</h3>
+                            <p class="text-sm text-slate-400">데이터 품질 관련 제안서나 보고서를 작성할 때, 특정 품질 특성(예: Credibility)의 모든 언급을 한눈에 보고 정확한 정의와 맥락을 인용할 수 있습니다.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Scenario 4 -->
+                <div class="bg-slate-800/50 rounded-lg p-6 border border-slate-700 hover:border-teal-500/40 transition-colors">
+                    <div class="flex items-start gap-3">
+                        <span class="text-2xl">🎓</span>
+                        <div>
+                            <h3 class="text-lg font-semibold text-white mb-2">4. 교육 및 트레이닝</h3>
+                            <p class="text-sm text-slate-400">데이터 품질 교육 과정에서 강사가 온톨로지 그래프를 보여주며 개념을 설명하고, 학습자가 PDF에서 직접 해당 섹션을 찾아가며 학습할 수 있습니다.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Scenario 5 -->
+                <div class="bg-slate-800/50 rounded-lg p-6 border border-slate-700 hover:border-teal-500/40 transition-colors">
+                    <div class="flex items-start gap-3">
+                        <span class="text-2xl">🏗️</span>
+                        <div>
+                            <h3 class="text-lg font-semibold text-white mb-2">5. 데이터 품질 프레임워크 설계</h3>
+                            <p class="text-sm text-slate-400">조직의 데이터 품질 관리 프레임워크를 구축할 때, 표준에 정의된 품질 특성 계층 구조를 참고하고 각 특성의 정의를 확인할 수 있습니다.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Scenario 6 -->
+                <div class="bg-slate-800/50 rounded-lg p-6 border border-slate-700 hover:border-teal-500/40 transition-colors">
+                    <div class="flex items-start gap-3">
+                        <span class="text-2xl">🤖</span>
+                        <div>
+                            <h3 class="text-lg font-semibold text-white mb-2">6. AI 시스템 학습 데이터 준비</h3>
+                            <p class="text-sm text-slate-400">데이터 품질 관련 AI 모델을 학습시킬 때, 온톨로지 구조와 표준 문서의 정확한 매핑을 활용하여 고품질 학습 데이터를 생성할 수 있습니다.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Scenario 7 -->
+                <div class="bg-slate-800/50 rounded-lg p-6 border border-slate-700 hover:border-teal-500/40 transition-colors">
+                    <div class="flex items-start gap-3">
+                        <span class="text-2xl">✅</span>
+                        <div>
+                            <h3 class="text-lg font-semibold text-white mb-2">7. 표준 준수성 검증</h3>
+                            <p class="text-sm text-slate-400">기존 데이터 품질 시스템이 ISO 표준을 준수하는지 검증할 때, 각 품질 지표가 표준의 어떤 개념과 매핑되는지 확인할 수 있습니다.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Scenario 8 -->
+                <div class="bg-slate-800/50 rounded-lg p-6 border border-slate-700 hover:border-teal-500/40 transition-colors">
+                    <div class="flex items-start gap-3">
+                        <span class="text-2xl">📊</span>
+                        <div>
+                            <h3 class="text-lg font-semibold text-white mb-2">8. 데이터 품질 평가 설계</h3>
+                            <p class="text-sm text-slate-400">데이터 품질 평가 체크리스트를 만들 때, 트리 뷰에서 모든 품질 특성을 순회하며 각 항목에 대한 평가 기준을 표준 문서에서 추출할 수 있습니다.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Scenario 9 -->
+                <div class="bg-slate-800/50 rounded-lg p-6 border border-slate-700 hover:border-teal-500/40 transition-colors">
+                    <div class="flex items-start gap-3">
+                        <span class="text-2xl">🔗</span>
+                        <div>
+                            <h3 class="text-lg font-semibold text-white mb-2">9. 다른 표준과의 매핑</h3>
+                            <p class="text-sm text-slate-400">ISO/IEC 25012 또는 다른 데이터 품질 표준과 ISO 5259-2를 비교할 때, 온톨로지 구조를 활용하여 개념 간 대응 관계를 분석할 수 있습니다.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Scenario 10 -->
+                <div class="bg-slate-800/50 rounded-lg p-6 border border-slate-700 hover:border-teal-500/40 transition-colors">
+                    <div class="flex items-start gap-3">
+                        <span class="text-2xl">🚀</span>
+                        <div>
+                            <h3 class="text-lg font-semibold text-white mb-2">10. 표준 문서 온톨로지화 사례 연구</h3>
+                            <p class="text-sm text-slate-400">다른 ISO 표준이나 기술 문서를 온톨로지로 변환하는 프로젝트의 레퍼런스로 활용하여, 구조화된 지식 표현 방법론을 학습할 수 있습니다.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Quick Tips -->
+            <div class="mt-8 bg-slate-800/30 rounded-lg p-6 border border-orange-500/20">
+                <h3 class="text-xl font-semibold text-orange-400 mb-4">💡 사용 팁</h3>
+                <ul class="space-y-2 text-sm text-slate-300">
+                    <li class="flex items-start gap-2">
+                        <span class="text-orange-400">▸</span>
+                        <span><strong>그래프 뷰</strong>에서 노드를 클릭하면 해당 클래스의 모든 언급 위치가 하단 패널에 표시됩니다.</span>
+                    </li>
+                    <li class="flex items-start gap-2">
+                        <span class="text-orange-400">▸</span>
+                        <span><strong>트리 뷰</strong>의 "모두 열기/닫기" 버튼으로 전체 계층 구조를 한눈에 보거나 접을 수 있습니다.</span>
+                    </li>
+                    <li class="flex items-start gap-2">
+                        <span class="text-orange-400">▸</span>
+                        <span><strong>PDF에서 텍스트를 드래그</strong>하면 자동으로 매칭되는 온톨로지 클래스를 찾아줍니다.</span>
+                    </li>
+                    <li class="flex items-start gap-2">
+                        <span class="text-orange-400">▸</span>
+                        <span><strong>문서 위치 카드</strong>를 클릭하면 PDF의 해당 페이지로 이동하며 키워드가 하이라이트됩니다.</span>
+                    </li>
+                    <li class="flex items-start gap-2">
+                        <span class="text-orange-400">▸</span>
+                        <span><strong>모바일</strong>에서는 왼쪽의 햄버거 메뉴로 온톨로지 패널을 열고 닫을 수 있습니다.</span>
+                    </li>
+                </ul>
+            </div>
+
+            <!-- Technical Details -->
+            <div class="mt-6 bg-slate-800/30 rounded-lg p-6 border border-teal-500/20">
+                <h3 class="text-xl font-semibold text-teal-400 mb-4">🛠️ 기술 스택</h3>
+                <div class="grid grid-cols-2 md:grid-cols-4 gap-4 text-sm text-slate-300">
+                    <div class="flex items-center gap-2">
+                        <span class="text-teal-400">●</span>
+                        <span>Cytoscape.js</span>
+                    </div>
+                    <div class="flex items-center gap-2">
+                        <span class="text-teal-400">●</span>
+                        <span>PDF.js</span>
+                    </div>
+                    <div class="flex items-center gap-2">
+                        <span class="text-teal-400">●</span>
+                        <span>OWL/RDF</span>
+                    </div>
+                    <div class="flex items-center gap-2">
+                        <span class="text-teal-400">●</span>
+                        <span>Tailwind CSS</span>
+                    </div>
+                </div>
+                <p class="mt-4 text-xs text-slate-400">
+                    이 도구는 <a href="https://www.pebblous.ai" target="_blank" class="text-orange-400 hover:underline">Pebblous</a>의 CURK 프로젝트의 일환으로 개발되었습니다.
+                </p>
             </div>
         </div>
     </div>
@@ -1019,7 +1282,17 @@
             // Panel toggle
             document.getElementById('toggle-ontology').addEventListener('click', () => {
                 const panel = document.getElementById('ontology-panel');
+                const overlay = document.getElementById('panel-overlay');
                 panel.classList.toggle('collapsed');
+                overlay.classList.toggle('active');
+            });
+
+            // Close panel when clicking overlay
+            document.getElementById('panel-overlay').addEventListener('click', () => {
+                const panel = document.getElementById('ontology-panel');
+                const overlay = document.getElementById('panel-overlay');
+                panel.classList.add('collapsed');
+                overlay.classList.remove('active');
             });
 
             // Graph controls
@@ -1030,6 +1303,40 @@
             document.getElementById('reset-graph').addEventListener('click', () => {
                 state.cy.reset();
             });
+
+            // Tree control buttons: Expand All / Collapse All
+            const expandAllBtn = document.getElementById('tree-expand-all');
+            const collapseAllBtn = document.getElementById('tree-collapse-all');
+
+            if (expandAllBtn) {
+                expandAllBtn.addEventListener('click', function() {
+                    const allChildren = document.querySelectorAll('#tree-container .tree-children');
+                    const allToggles = document.querySelectorAll('#tree-container .tree-toggle');
+
+                    allChildren.forEach(function(child) {
+                        child.classList.remove('collapsed');
+                    });
+
+                    allToggles.forEach(function(toggle) {
+                        toggle.classList.add('expanded');
+                    });
+                });
+            }
+
+            if (collapseAllBtn) {
+                collapseAllBtn.addEventListener('click', function() {
+                    const allChildren = document.querySelectorAll('#tree-container .tree-children');
+                    const allToggles = document.querySelectorAll('#tree-container .tree-toggle');
+
+                    allChildren.forEach(function(child) {
+                        child.classList.add('collapsed');
+                    });
+
+                    allToggles.forEach(function(toggle) {
+                        toggle.classList.remove('expanded');
+                    });
+                });
+            }
 
             // PDF text selection -> Ontology (bidirectional)
             document.addEventListener('selectionchange', () => {
