--- a/project/CURK/ontology/pdf-navigator.html
+++ b/project/CURK/ontology/pdf-navigator.html
@@ -962,9 +962,360 @@
         .footer-social-icon:hover {
             color: #e2e8f0;
         }
+
+        /* Article Summary Styles */
+        .article-summary {
+            background: linear-gradient(135deg, rgba(15, 23, 42, 0.9) 0%, rgba(30, 41, 59, 0.9) 100%);
+            border: 1px solid #334155;
+            border-radius: 0.75rem;
+            overflow: hidden;
+            margin-bottom: 2rem;
+        }
+
+        .summary-header {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 1rem 1.5rem;
+            cursor: pointer;
+            transition: background 0.2s;
+            border-bottom: 1px solid #334155;
+        }
+
+        .summary-header:hover {
+            background: rgba(51, 65, 85, 0.3);
+        }
+
+        .summary-title {
+            font-size: 1.125rem;
+            font-weight: 600;
+            color: #F86825;
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+        }
+
+        .summary-toggle-icon {
+            transition: transform 0.3s;
+            color: #64748b;
+        }
+
+        .summary-toggle-icon.expanded {
+            transform: rotate(180deg);
+        }
+
+        .summary-content {
+            max-height: 0;
+            overflow: hidden;
+            transition: max-height 0.3s ease-out;
+        }
+
+        .summary-content.expanded {
+            max-height: 1000px;
+            transition: max-height 0.5s ease-in;
+        }
+
+        .summary-inner {
+            padding: 1.5rem;
+        }
+
+        .summary-cards-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+            gap: 1rem;
+            margin-bottom: 0;
+        }
+
+        .summary-card {
+            background: rgba(30, 41, 59, 0.5);
+            border: 1px solid #475569;
+            border-radius: 0.5rem;
+            padding: 1.25rem;
+            transition: all 0.2s;
+        }
+
+        .summary-card:hover {
+            border-color: #F86825;
+            background: rgba(30, 41, 59, 0.7);
+            transform: translateY(-2px);
+            box-shadow: 0 4px 12px rgba(248, 104, 37, 0.1);
+        }
+
+        .summary-card-header {
+            display: flex;
+            align-items: center;
+            gap: 0.75rem;
+            margin-bottom: 0.75rem;
+        }
+
+        .summary-card-icon {
+            width: 2.5rem;
+            height: 2.5rem;
+            border-radius: 0.5rem;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 1.5rem;
+            flex-shrink: 0;
+        }
+
+        .icon-why {
+            background: linear-gradient(135deg, rgba(248, 104, 37, 0.2), rgba(248, 104, 37, 0.1));
+        }
+
+        .icon-what {
+            background: linear-gradient(135deg, rgba(20, 184, 166, 0.2), rgba(20, 184, 166, 0.1));
+        }
+
+        .icon-how {
+            background: linear-gradient(135deg, rgba(59, 130, 246, 0.2), rgba(59, 130, 246, 0.1));
+        }
+
+        .summary-card-title {
+            font-size: 1.125rem;
+            font-weight: 700;
+            color: #F86825;
+            margin: 0;
+        }
+
+        .summary-card-subtitle {
+            font-size: 0.75rem;
+            color: #94a3b8;
+            text-transform: uppercase;
+            letter-spacing: 0.05em;
+            margin: 0;
+        }
+
+        .summary-card-content {
+            color: #cbd5e1;
+            line-height: 1.7;
+            font-size: 0.9375rem;
+        }
+
+        .summary-card-content p {
+            margin-bottom: 0.75rem;
+        }
+
+        .summary-card-content p:last-child {
+            margin-bottom: 0;
+        }
+
+        .summary-list {
+            list-style: none;
+            padding-left: 0;
+        }
+
+        .summary-list li {
+            padding-left: 1.5rem;
+            position: relative;
+            margin-bottom: 0.5rem;
+        }
+
+        .summary-list li:before {
+            content: "→";
+            position: absolute;
+            left: 0;
+            color: #F86825;
+            font-weight: bold;
+        }
+
+        .summary-tag {
+            display: inline-block;
+            padding: 0.25rem 0.75rem;
+            background: rgba(248, 104, 37, 0.1);
+            border: 1px solid rgba(248, 104, 37, 0.3);
+            border-radius: 9999px;
+            font-size: 0.75rem;
+            color: #F86825;
+            margin-right: 0.5rem;
+            margin-bottom: 0.5rem;
+        }
+
+        /* PDF Upload Disclaimer Modal */
+        .disclaimer-modal {
+            position: fixed;
+            inset: 0;
+            background: rgba(0, 0, 0, 0.9);
+            backdrop-filter: blur(8px);
+            z-index: 10000;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 1rem;
+        }
+
+        .disclaimer-modal.hidden {
+            display: none;
+        }
+
+        .disclaimer-content {
+            background: linear-gradient(135deg, #0f172a 0%, #1e293b 100%);
+            border: 2px solid #F86825;
+            border-radius: 1rem;
+            max-width: 600px;
+            width: 100%;
+            padding: 2rem;
+            box-shadow: 0 20px 60px rgba(248, 104, 37, 0.3);
+        }
+
+        .disclaimer-header {
+            text-align: center;
+            margin-bottom: 1.5rem;
+        }
+
+        .disclaimer-icon {
+            font-size: 3rem;
+            margin-bottom: 1rem;
+        }
+
+        .disclaimer-title {
+            font-size: 1.5rem;
+            font-weight: 700;
+            color: #F86825;
+            margin-bottom: 0.5rem;
+        }
+
+        .disclaimer-subtitle {
+            font-size: 0.875rem;
+            color: #94a3b8;
+        }
+
+        .disclaimer-body {
+            color: #cbd5e1;
+            line-height: 1.7;
+            margin-bottom: 1.5rem;
+        }
+
+        .disclaimer-body p {
+            margin-bottom: 1rem;
+        }
+
+        .disclaimer-body strong {
+            color: #F86825;
+        }
+
+        .disclaimer-link {
+            color: #14b8a6;
+            text-decoration: underline;
+            transition: color 0.2s;
+        }
+
+        .disclaimer-link:hover {
+            color: #5eead4;
+        }
+
+        .upload-zone {
+            border: 2px dashed #475569;
+            border-radius: 0.75rem;
+            padding: 2rem;
+            text-align: center;
+            background: rgba(30, 41, 59, 0.3);
+            cursor: pointer;
+            transition: all 0.3s;
+            margin-bottom: 1rem;
+        }
+
+        .upload-zone:hover {
+            border-color: #F86825;
+            background: rgba(248, 104, 37, 0.05);
+        }
+
+        .upload-zone.dragover {
+            border-color: #F86825;
+            background: rgba(248, 104, 37, 0.1);
+            transform: scale(1.02);
+        }
+
+        .upload-icon {
+            font-size: 3rem;
+            margin-bottom: 0.5rem;
+        }
+
+        .upload-text {
+            color: #cbd5e1;
+            font-size: 0.9375rem;
+            margin-bottom: 0.25rem;
+        }
+
+        .upload-hint {
+            color: #64748b;
+            font-size: 0.8125rem;
+        }
+
+        #pdf-file-input {
+            display: none;
+        }
+
+        .upload-button {
+            background: #F86825;
+            color: white;
+            border: none;
+            padding: 0.75rem 1.5rem;
+            border-radius: 0.5rem;
+            font-weight: 600;
+            cursor: pointer;
+            transition: all 0.2s;
+            font-size: 0.9375rem;
+        }
+
+        .upload-button:hover {
+            background: #e05a1a;
+            transform: translateY(-2px);
+            box-shadow: 0 4px 12px rgba(248, 104, 37, 0.3);
+        }
+
+        .upload-button:disabled {
+            background: #475569;
+            cursor: not-allowed;
+            transform: none;
+        }
     </style>
 </head>
 <body class="bg-slate-950 text-slate-300">
+    <!-- PDF Upload Disclaimer Modal -->
+    <div id="disclaimer-modal" class="disclaimer-modal hidden">
+        <div class="disclaimer-content">
+            <div class="disclaimer-header">
+                <div class="disclaimer-icon">📄</div>
+                <h2 class="disclaimer-title">PDF 문서 필요</h2>
+                <p class="disclaimer-subtitle">ISO/IEC 5259-2:2024 표준 문서를 업로드해주세요</p>
+            </div>
+
+            <div class="disclaimer-body">
+                <p>이 인터랙티브 도구를 사용하려면 <strong>ISO/IEC 5259-2:2024</strong> 표준 문서(PDF)가 필요합니다.</p>
+
+                <p><strong>문서 정보:</strong></p>
+                <ul class="summary-list" style="margin-bottom: 1rem;">
+                    <li>표준명: ISO/IEC 5259-2</li>
+                    <li>부제: Artificial intelligence — Data quality for analytics and machine learning (ML) — Part 2: Data quality measures</li>
+                    <li>발행일: 2024-11</li>
+                    <li>페이지: 46페이지</li>
+                </ul>
+
+                <p>표준 문서는 <a href="https://www.iso.org/standard/81860.html" target="_blank" rel="noopener" class="disclaimer-link">ISO 공식 웹사이트</a>에서 구매하실 수 있습니다.</p>
+
+                <p style="color: #f59e0b; font-size: 0.875rem; background: rgba(245, 158, 11, 0.1); padding: 0.75rem; border-radius: 0.5rem; border-left: 3px solid #f59e0b;">
+                    ⚠️ 저작권 보호를 위해 PDF 파일은 서버에 업로드되지 않으며, 브라우저 메모리에서만 처리됩니다.
+                </p>
+            </div>
+
+            <!-- Upload Zone -->
+            <div id="upload-zone" class="upload-zone">
+                <div class="upload-icon">📤</div>
+                <p class="upload-text"><strong>클릭하거나 파일을 드래그하여 업로드</strong></p>
+                <p class="upload-hint">ISO_IEC5259-2_2024_EN.pdf (최대 10MB)</p>
+            </div>
+
+            <input type="file" id="pdf-file-input" accept=".pdf" />
+
+            <div style="text-align: center;">
+                <button id="upload-button" class="upload-button" disabled>
+                    파일을 선택해주세요
+                </button>
+            </div>
+        </div>
+    </div>
+
     <!-- Fixed Header -->
     <nav class="fixed top-0 left-0 right-0 z-50 bg-slate-950/95 backdrop-blur-sm border-b border-slate-800">
         <div class="container mx-auto px-4 py-3">
@@ -1033,6 +1384,106 @@
                         <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"></path>
                     </svg>
                 </button>
+            </div>
+
+            <!-- Article Summary (Collapsible) -->
+            <div class="article-summary">
+                <div class="summary-header" id="summary-toggle">
+                    <div class="summary-title">
+                        <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"></path>
+                        </svg>
+                        아티클 요약
+                    </div>
+                    <svg class="w-5 h-5 summary-toggle-icon" id="summary-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
+                    </svg>
+                </div>
+                <div class="summary-content" id="summary-content">
+                    <div class="summary-inner">
+                        <div class="summary-cards-grid">
+                            <!-- WHY Card -->
+                            <div class="summary-card">
+                                <div class="summary-card-header">
+                                    <div class="summary-card-icon icon-why">
+                                        💡
+                                    </div>
+                                    <div>
+                                        <h3 class="summary-card-title">Why</h3>
+                                        <p class="summary-card-subtitle">왜 만들었나요?</p>
+                                    </div>
+                                </div>
+                                <div class="summary-card-content">
+                                    <p><strong>뉴로-심볼릭 AI로의 여정</strong></p>
+                                    <p>벡터 임베딩 + RAG에서 시작해, 온톨로지와 지식그래프의 결합은 필연입니다. 2000년대 초 ETRI에서 배운 OWL과 Topic Map, 그리고 현재 페블러스 데이터클리닉의 Agentic AI 개발 경험이 만나 하이브리드 AI를 향합니다.</p>
+                                    <p><strong>ISO 5259-2를 동적 품질 관리로</strong></p>
+                                    <p>AI/ML 데이터 품질 표준을 실용적 온톨로지로 구현하고, 품질 기준-데이터-개선 방법을 동적 루프에서 관리하는 것이 목표입니다. 팔란티어 온톨로지처럼 액션의 결과를 학습하고 지식으로 축적하는 시스템으로 발전시킵니다.</p>
+                                </div>
+                            </div>
+
+                            <!-- WHAT Card -->
+                            <div class="summary-card">
+                                <div class="summary-card-header">
+                                    <div class="summary-card-icon icon-what">
+                                        📚
+                                    </div>
+                                    <div>
+                                        <h3 class="summary-card-title">What</h3>
+                                        <p class="summary-card-subtitle">무엇인가요?</p>
+                                    </div>
+                                </div>
+                                <div class="summary-card-content">
+                                    <p><strong>온톨로지 기반 PDF 탐색 도구</strong></p>
+                                    <p>ISO/IEC 5259-2 데이터 품질 표준 문서를 OWL/RDF 온톨로지로 표현하고, 인터랙티브하게 탐색할 수 있는 웹 도구입니다.</p>
+                                    <p><strong>4가지 온톨로지 레이어</strong></p>
+                                    <ul class="summary-list">
+                                        <li>품질 특성 (34개 클래스)</li>
+                                        <li>문서 구조 (섹션, 조항, 부속서)</li>
+                                        <li>용어 정의 (3장 핵심 개념)</li>
+                                        <li>ISO 메타 온톨로지</li>
+                                    </ul>
+                                    <p><strong>기술 스택</strong></p>
+                                    <p>
+                                        <span class="summary-tag">OWL/RDF</span>
+                                        <span class="summary-tag">Cytoscape.js</span>
+                                        <span class="summary-tag">PDF.js</span>
+                                        <span class="summary-tag">Prism.js</span>
+                                    </p>
+                                </div>
+                            </div>
+
+                            <!-- HOW Card -->
+                            <div class="summary-card">
+                                <div class="summary-card-header">
+                                    <div class="summary-card-icon icon-how">
+                                        🛠️
+                                    </div>
+                                    <div>
+                                        <h3 class="summary-card-title">How</h3>
+                                        <p class="summary-card-subtitle">어떻게 사용하나요?</p>
+                                    </div>
+                                </div>
+                                <div class="summary-card-content">
+                                    <p><strong>인터랙티브 탐색</strong></p>
+                                    <ul class="summary-list">
+                                        <li>왼쪽 패널에서 온톨로지 레이어 선택</li>
+                                        <li>그래프 뷰 (트리/원형/그리드/동심원)</li>
+                                        <li>트리 뷰 (계층 구조)</li>
+                                        <li>개념 클릭 → PDF 자동 이동</li>
+                                    </ul>
+                                    <p><strong>온톨로지 소스 확인</strong></p>
+                                    <ul class="summary-list">
+                                        <li>OWL/XML 형식 코드 보기</li>
+                                        <li>RDF/Turtle 형식 전환</li>
+                                        <li>Syntax Highlighting</li>
+                                        <li>모달 전체 화면 뷰</li>
+                                        <li>소스 파일 다운로드</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -3428,6 +3879,25 @@
             const guideSection = document.querySelector('.usage-guide');
             if (guideSection) {
                 guideSection.scrollIntoView({ behavior: 'smooth', block: 'start' });
+            }
+        });
+
+        // Article Summary Toggle
+        const summaryToggle = document.getElementById('summary-toggle');
+        const summaryContent = document.getElementById('summary-content');
+        const summaryIcon = document.getElementById('summary-icon');
+
+        summaryToggle.addEventListener('click', function() {
+            const isExpanded = summaryContent.classList.contains('expanded');
+
+            if (isExpanded) {
+                // Collapse
+                summaryContent.classList.remove('expanded');
+                summaryIcon.classList.remove('expanded');
+            } else {
+                // Expand
+                summaryContent.classList.add('expanded');
+                summaryIcon.classList.add('expanded');
             }
         });
     </script>
