--- a/project/CURK/ontology/pdf-navigator.html
+++ b/project/CURK/ontology/pdf-navigator.html
@@ -1152,38 +1152,40 @@
             background: linear-gradient(135deg, #0f172a 0%, #1e293b 100%);
             border: 2px solid #F86825;
             border-radius: 1rem;
-            max-width: 600px;
+            max-width: 500px;
             width: 100%;
-            padding: 2rem;
+            max-height: 90vh;
+            overflow-y: auto;
+            padding: 1.5rem;
             box-shadow: 0 20px 60px rgba(248, 104, 37, 0.3);
         }
 
         .disclaimer-header {
             text-align: center;
-            margin-bottom: 1.5rem;
-        }
-
-        .disclaimer-icon {
-            font-size: 3rem;
             margin-bottom: 1rem;
         }
 
-        .disclaimer-title {
-            font-size: 1.5rem;
-            font-weight: 700;
-            color: #F86825;
+        .disclaimer-icon {
+            font-size: 2rem;
             margin-bottom: 0.5rem;
         }
 
+        .disclaimer-title {
+            font-size: 1.25rem;
+            font-weight: 700;
+            color: #F86825;
+            margin-bottom: 0.25rem;
+        }
+
         .disclaimer-subtitle {
-            font-size: 0.875rem;
+            font-size: 0.8rem;
             color: #94a3b8;
         }
 
         .disclaimer-body {
             color: #cbd5e1;
-            line-height: 1.7;
-            margin-bottom: 1.5rem;
+            line-height: 1.6;
+            margin-bottom: 1rem;
         }
 
         .disclaimer-body p {
@@ -1204,10 +1206,53 @@
             color: #5eead4;
         }
 
+        /* Custom Tooltip */
+        .tooltip-container {
+            position: relative;
+            display: inline-block;
+        }
+
+        .tooltip-container .tooltip-text {
+            visibility: hidden;
+            opacity: 0;
+            position: absolute;
+            bottom: 125%;
+            left: 50%;
+            transform: translateX(-50%);
+            background: rgba(15, 23, 42, 0.98);
+            color: #cbd5e1;
+            padding: 0.5rem 0.75rem;
+            border-radius: 0.375rem;
+            font-size: 0.75rem;
+            white-space: pre-line;
+            z-index: 10001;
+            border: 1px solid #475569;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
+            transition: opacity 0.2s, visibility 0.2s;
+            min-width: 250px;
+            text-align: left;
+            line-height: 1.5;
+        }
+
+        .tooltip-container .tooltip-text::after {
+            content: '';
+            position: absolute;
+            top: 100%;
+            left: 50%;
+            transform: translateX(-50%);
+            border: 5px solid transparent;
+            border-top-color: rgba(15, 23, 42, 0.98);
+        }
+
+        .tooltip-container:hover .tooltip-text {
+            visibility: visible;
+            opacity: 1;
+        }
+
         .upload-zone {
             border: 2px dashed #475569;
-            border-radius: 0.75rem;
-            padding: 2rem;
+            border-radius: 0.5rem;
+            padding: 1.25rem;
             text-align: center;
             background: rgba(30, 41, 59, 0.3);
             cursor: pointer;
@@ -1227,19 +1272,19 @@
         }
 
         .upload-icon {
-            font-size: 3rem;
-            margin-bottom: 0.5rem;
+            font-size: 2rem;
+            margin-bottom: 0.25rem;
         }
 
         .upload-text {
             color: #cbd5e1;
-            font-size: 0.9375rem;
-            margin-bottom: 0.25rem;
+            font-size: 0.875rem;
+            margin-bottom: 0.125rem;
         }
 
         .upload-hint {
             color: #64748b;
-            font-size: 0.8125rem;
+            font-size: 0.75rem;
         }
 
         #pdf-file-input {
@@ -1250,12 +1295,12 @@
             background: #F86825;
             color: white;
             border: none;
-            padding: 0.75rem 1.5rem;
+            padding: 0.625rem 1.25rem;
             border-radius: 0.5rem;
             font-weight: 600;
             cursor: pointer;
             transition: all 0.2s;
-            font-size: 0.9375rem;
+            font-size: 0.875rem;
         }
 
         .upload-button:hover {
@@ -1277,33 +1322,36 @@
         <div class="disclaimer-content">
             <div class="disclaimer-header">
                 <div class="disclaimer-icon">📄</div>
-                <h2 class="disclaimer-title">PDF 문서 필요</h2>
-                <p class="disclaimer-subtitle">ISO/IEC 5259-2:2024 표준 문서를 업로드해주세요</p>
+                <h2 class="disclaimer-title">PDF 문서 업로드</h2>
+                <p class="disclaimer-subtitle">
+                    <span class="tooltip-container" style="cursor: help;">
+                        ISO/IEC 5259-2:2024 (46p)
+                        <span class="tooltip-text">Artificial intelligence — Data quality for analytics and machine learning (ML)
+Part 2: Data quality measures
+발행일: 2024-11
+표지 포함 총 46페이지</span>
+                    </span>
+                </p>
             </div>
 
             <div class="disclaimer-body">
-                <p>이 인터랙티브 도구를 사용하려면 <strong>ISO/IEC 5259-2:2024</strong> 표준 문서(PDF)가 필요합니다.</p>
+                <p style="font-size: 0.875rem; margin-bottom: 0.75rem; color: #cbd5e1;">
+                    이 도구를 사용하려면 <span class="tooltip-container" style="cursor: help; border-bottom: 1px dotted #94a3b8; font-weight: 600;">ISO/IEC 5259-2:2024<span class="tooltip-text">Artificial intelligence — Data quality for analytics and machine learning (ML)
+Part 2: Data quality measures
+발행일: 2024-11</span></span> 표준 문서가 필요합니다.
+                    <a href="https://www.iso.org/standard/81860.html" target="_blank" rel="noopener" class="disclaimer-link">ISO 웹사이트</a>에서 구매 가능합니다.
+                </p>
 
-                <p><strong>문서 정보:</strong></p>
-                <ul class="summary-list" style="margin-bottom: 1rem;">
-                    <li>표준명: ISO/IEC 5259-2</li>
-                    <li>부제: Artificial intelligence — Data quality for analytics and machine learning (ML) — Part 2: Data quality measures</li>
-                    <li>발행일: 2024-11</li>
-                    <li>페이지: 46페이지</li>
-                </ul>
-
-                <p>표준 문서는 <a href="https://www.iso.org/standard/81860.html" target="_blank" rel="noopener" class="disclaimer-link">ISO 공식 웹사이트</a>에서 구매하실 수 있습니다.</p>
-
-                <p style="color: #f59e0b; font-size: 0.875rem; background: rgba(245, 158, 11, 0.1); padding: 0.75rem; border-radius: 0.5rem; border-left: 3px solid #f59e0b;">
-                    ⚠️ 저작권 보호를 위해 PDF 파일은 서버에 업로드되지 않으며, 브라우저 메모리에서만 처리됩니다.
+                <p style="font-size: 0.8rem; color: #94a3b8; margin-bottom: 1rem;">
+                    ⚠️ PDF는 서버에 전송되지 않고 브라우저에서만 처리됩니다.
                 </p>
             </div>
 
             <!-- Upload Zone -->
             <div id="upload-zone" class="upload-zone">
                 <div class="upload-icon">📤</div>
-                <p class="upload-text"><strong>클릭하거나 파일을 드래그하여 업로드</strong></p>
-                <p class="upload-hint">ISO_IEC5259-2_2024_EN.pdf (최대 10MB)</p>
+                <p class="upload-text"><strong>PDF 파일 선택 또는 드래그</strong></p>
+                <p class="upload-hint">최대 10MB</p>
             </div>
 
             <input type="file" id="pdf-file-input" accept=".pdf" />
@@ -2744,19 +2792,7 @@
                 } else {
                     // Try to load from default path
                     console.log('📄 Attempting to load PDF from default path...');
-                    try {
-                        loadingTask = pdfjsLib.getDocument('./example/ISO_IEC5259-2_2024_EN.pdf');
-                    } catch (e) {
-                        // Show disclaimer modal if default PDF not found
-                        console.log('⚠️ Default PDF not found, showing upload modal...');
-                        document.getElementById('disclaimer-modal').classList.remove('hidden');
-                        loadingEl.innerHTML = `
-                            <div class="text-yellow-400">
-                                <p>PDF 파일을 업로드해주세요</p>
-                            </div>
-                        `;
-                        return;
-                    }
+                    loadingTask = pdfjsLib.getDocument('./example/ISO_IEC5259-2_2024_EN.pdf');
                 }
 
                 state.pdfDoc = await loadingTask.promise;
@@ -2775,7 +2811,7 @@
                 console.error('❌ Failed to load PDF:', error);
 
                 // If error is about missing file, show disclaimer modal
-                if (error.message && (error.message.includes('404') || error.message.includes('fetch'))) {
+                if (error.message && (error.message.includes('404') || error.message.includes('fetch') || error.message.includes('Missing PDF'))) {
                     console.log('⚠️ PDF file not found, showing upload modal...');
                     document.getElementById('disclaimer-modal').classList.remove('hidden');
                     loadingEl.innerHTML = `
