--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
                                     ${featuredBadge}
                                     <div class="text-xs text-slate-500 mb-2">${article.date}</div>
                                     ${tagsScrollHtml}
-                                    <h3 class="text-xl font-bold text-white group-hover:accent-color transition-colors">${article.title}</h3>
+                                    <h3 class="text-2xl font-bold text-white group-hover:accent-color transition-colors">${article.title}</h3>
                                     <p class="mt-3 text-sm text-slate-400">${article.description}</p>
                                 </div>
                                 ${imageTag}
@@ -612,9 +612,16 @@
                                     ${featuredBadge}
                                     <div class="text-xs text-slate-500 mb-2">${article.date}</div>
                                     ${tagsScrollHtml}
-                                    <h3 class="text-xl font-bold text-white mb-3">${article.title}</h3>
+                                    <h3 class="text-2xl font-bold text-white mb-3">${article.title}</h3>
                                     <p class="text-sm text-slate-400 mb-4">${article.description}</p>
-                                    <button onclick="openModal('${article.modalId}')" class="w-full text-center accent-bg text-white font-semibold py-2 rounded-md hover:opacity-90 transition-opacity">자세히 보기</button>
+                                    <div class="grid grid-cols-2 gap-2">
+                                        <button onclick="openModal('${article.modalId}')" class="text-center bg-slate-700 hover:bg-slate-600 text-white font-semibold py-2 rounded-md transition-colors">
+                                            모달 보기
+                                        </button>
+                                        <a href="${article.path}" class="text-center accent-bg text-white font-semibold py-2 rounded-md hover:opacity-90 transition-opacity flex items-center justify-center">
+                                            페이지 열기
+                                        </a>
+                                    </div>
                                 </div>
                                 ${imageTag}
                             </div>
@@ -626,7 +633,7 @@
                                     ${featuredBadge}
                                     <div class="text-xs text-slate-500 mb-2">${article.date}</div>
                                     ${tagsScrollHtml}
-                                    <h3 class="text-xl font-bold text-white group-hover:accent-color transition-colors">${article.title}</h3>
+                                    <h3 class="text-2xl font-bold text-white group-hover:accent-color transition-colors">${article.title}</h3>
                                     <p class="mt-3 text-sm text-slate-400">${article.description}</p>
                                 </div>
                                 ${imageTag}
@@ -678,21 +685,26 @@
 
                         if (hasModal) {
                             return `
-                                <div class="p-4 hover:bg-slate-800/50 transition-colors cursor-pointer" onclick="openModal('${article.modalId}')">
+                                <div class="p-4 hover:bg-slate-800/50 transition-colors">
                                     <div class="flex flex-col md:flex-row md:items-center md:justify-between gap-3">
                                         <div class="flex-grow">
                                             <div class="flex items-center gap-2 mb-1">
                                                 ${featuredBadge}
                                                 <span class="text-xs text-slate-500">${article.date}</span>
                                             </div>
-                                            <h4 class="text-base font-semibold text-white hover:text-orange-500 transition-colors mb-2">${article.title}</h4>
+                                            <h4 class="text-base font-semibold text-white mb-2">${article.title}</h4>
                                             <div class="flex flex-wrap gap-1">
                                                 ${tagsHtml}
                                                 ${moreTags}
                                             </div>
                                         </div>
-                                        <div class="flex-shrink-0 md:ml-4">
-                                            <span class="text-sm text-slate-400">자세히 보기 →</span>
+                                        <div class="flex-shrink-0 md:ml-4 flex gap-2">
+                                            <button onclick="openModal('${article.modalId}')" class="px-3 py-1.5 text-sm bg-slate-700 hover:bg-slate-600 text-white rounded transition-colors">
+                                                모달
+                                            </button>
+                                            <a href="${article.path}" class="px-3 py-1.5 text-sm accent-bg text-white rounded hover:opacity-90 transition-opacity">
+                                                페이지
+                                            </a>
                                         </div>
                                     </div>
                                 </div>
